salesforce-main/src/main/default/objects/Case/fields/Affected_User_Identities__c.field-meta.xml
<CustomField>
    <fullName>Affected_User_Identities__c</fullName>
    <description>The affected user id and a prefix of the system the identity comes from. i.e. Profile(&lt;profileid&gt;), SIS(&lt;bannerid&gt;), CRM&lt;crmid&gt;, Neptun(&lt;neptuneid&gt;)]</description>
    <inlineHelpText>The affected user id and a prefix of the system the identity comes from. i.e. Profile(&lt;profileid&gt;), SIS(&lt;bannerid&gt;), CRM&lt;crmid&gt;, Neptun(&lt;neptuneid&gt;)]</inlineHelpText>
    <label>Affected User Identities</label>
    <length>255</length>
    <type>Text</type>
</CustomField>