salesforce-main/src/main/default/objects/Case/fields/Affected_User_Type__c.field-meta.xml
<CustomField>
    <fullName>Affected_User_Type__c</fullName>
    <description>The user type that is affected by this case.</description>
    <inlineHelpText>For example, Customer/Student/TM/Coach.</inlineHelpText>
    <label>Affected User Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>