salesforce-main/src/main/default/objects/Case/fields/Auto_Reply_BPPCaseQueries__c.field-meta.xml
<CustomField>
    <fullName>Auto_Reply_BPPCaseQueries__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Reply BPPCaseQueries</label>
    <type>Checkbox</type>
</CustomField>