salesforce-main/src/main/default/objects/Case/fields/Auto_Reply_BPPCustomerService__c.field-meta.xml
<CustomField>
    <fullName>Auto_Reply_BPPCustomerService__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field gets checked by a workflow &apos;Auto Reply CSA case&apos; when a student emails to &apos;BPPCustomerServiceTeam@bpp.com&apos; instead of raising a query by webform</description>
    <label>Auto Reply BPPCustomerService</label>
    <type>Checkbox</type>
</CustomField>