salesforce-main/src/main/default/objects/Case/fields/Backlog_ID__c.field-meta.xml
<CustomField>
    <fullName>Backlog_ID__c</fullName>
    <displayFormat>BL{0}</displayFormat>
    <label>Backlog ID</label>
    <type>AutoNumber</type>
</CustomField>