salesforce-main/src/main/default/objects/Case/fields/Bank_Letter_Sent__c.field-meta.xml
<CustomField>
    <fullName>Bank_Letter_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bank Letter Sent</label>
    <type>Checkbox</type>
</CustomField>