salesforce-main/src/main/default/objects/Case/fields/Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name__c</fullName>
    <label>Bank Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HSBC</fullName>
            </value>
            <value>
                <fullName>Barclays</fullName>
            </value>
            <value>
                <fullName>TSB</fullName>
            </value>
            <value>
                <fullName>Halifax</fullName>
            </value>
            <value>
                <fullName>Lloyds Bank</fullName>
            </value>
            <value>
                <fullName>NatWest</fullName>
            </value>
            <value>
                <fullName>Santander</fullName>
            </value>
            <value>
                <fullName>Royal Bank of Scotland</fullName>
            </value>
            <value>
                <fullName>Metro Bank</fullName>
            </value>
            <value>
                <fullName>The Co-Operative Bank</fullName>
            </value>
            <value>
                <fullName>Yorkshire Bank</fullName>
            </value>
            <value>
                <fullName>Clydesdale Bank</fullName>
            </value>
            <value>
                <fullName>Nationwide</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>