salesforce-main/src/main/default/objects/Case/fields/Bank_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name_Text__c</fullName>
    <label>Bank Name Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>