salesforce-main/src/main/default/objects/Case/fields/Business_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Business_Sponsor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Person sponsoring this initiative.</description>
    <label>Business Sponsor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sponsored_Backlogs</relationshipName>
    <type>Lookup</type>
</CustomField>