salesforce-main/src/main/default/objects/Case/fields/Campus__c.field-meta.xml
<CustomField>
    <fullName>Campus__c</fullName>
    <description>This field is used to specify the student campus</description>
    <label>Campus</label>
    <length>60</length>
    <type>Text</type>
</CustomField>