salesforce-main/src/main/default/objects/Case/fields/Case_Auto_Close_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Case_Auto_Close_Date_Time__c</fullName>
    <description>Date/time of when to automatically close a case, normally the next working day, after a ready-to-close notification has been sent to the case contact.</description>
    <label>Case Auto-Close Date/Time</label>
    <type>DateTime</type>
</CustomField>