salesforce-main/src/main/default/objects/Case/fields/Case_Comments_for_Email__c.field-meta.xml
<CustomField>
    <fullName>Case_Comments_for_Email__c</fullName>
    <description>To hold the value of case comments</description>
    <label>Case Comments for Email</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>