salesforce-main/src/main/default/objects/Case/fields/Case_Group__c.field-meta.xml
<CustomField>
    <fullName>Case_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field provides look up to Case Group from Case.</description>
    <label>Case Group</label>
    <referenceTo>Case_Group__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>