salesforce-main/src/main/default/objects/Case/fields/Case_Link__c.field-meta.xml
<CustomField>
    <fullName>Case_Link__c</fullName>
    <formula>Case_UI_Link__c &amp; CaseNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Link</label>
    <type>Text</type>
</CustomField>