salesforce-main/src/main/default/objects/Case/fields/Case_UI_Link__c.field-meta.xml
<CustomField>
    <fullName>Case_UI_Link__c</fullName>
    <label>Case Link Base URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>