salesforce-main/src/main/default/objects/Case/fields/Case_UI_Link_with_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_UI_Link_with_Case_Number__c</fullName>
    <description>This field is used in field update to append the Case Number with Case UI Link</description>
    <label>Case UI Link with Case Number</label>
    <type>Url</type>
</CustomField>