salesforce-main/src/main/default/objects/Case/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>This field is used to store the case comments</description>
    <label>Comments</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>