salesforce-main/src/main/default/objects/Case/fields/Confidential__c.field-meta.xml
<CustomField>
    <fullName>Confidential__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate the case is Confidential.</description>
    <label>Confidential</label>
    <type>Checkbox</type>
</CustomField>