salesforce-main/src/main/default/objects/Case/fields/Course_Module_CRN__c.field-meta.xml
<CustomField>
    <fullName>Course_Module_CRN__c</fullName>
    <description>This field contains the value of Course/Module/CRN</description>
    <label>Course/Module/CRN</label>
    <length>60</length>
    <type>Text</type>
</CustomField>