salesforce-main/src/main/default/objects/Case/fields/CS_Email_Verified__c.field-meta.xml
<CustomField>
    <fullName>CS_Email_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CS Email Verified</label>
    <type>Checkbox</type>
</CustomField>