salesforce-main/src/main/default/objects/Case/fields/CS_External_Handover_Department__c.field-meta.xml
<CustomField>
    <fullName>CS_External_Handover_Department__c</fullName>
    <label>External Handover Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AAT General Team</fullName>
            </value>
            <value>
                <fullName>Applications Support (IT)</fullName>
            </value>
            <value>
                <fullName>Apprenticeship Team</fullName>
            </value>
            <value>
                <fullName>Client Services Manchester</fullName>
            </value>
            <value>
                <fullName>Course Set Up</fullName>
            </value>
            <value>
                <fullName>Credit Control</fullName>
            </value>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>Direct Sales</fullName>
            </value>
            <value>
                <fullName>INTL LM Sales Team</fullName>
            </value>
            <value>
                <fullName>IT Support Desk</fullName>
            </value>
            <value>
                <fullName>Key Client Team London</fullName>
            </value>
            <value>
                <fullName>Learning Support</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Live Team</fullName>
            </value>
            <value>
                <fullName>LM Ops</fullName>
            </value>
            <value>
                <fullName>Marking Team</fullName>
            </value>
            <value>
                <fullName>Materials Distribution</fullName>
            </value>
            <value>
                <fullName>PD Ops</fullName>
            </value>
            <value>
                <fullName>PE LM Accounts</fullName>
            </value>
            <value>
                <fullName>Performance Support Team</fullName>
            </value>
            <value>
                <fullName>PQ Centre Staff</fullName>
            </value>
            <value>
                <fullName>PQ HOP/Faculty</fullName>
            </value>
            <value>
                <fullName>PQ Operations</fullName>
            </value>
            <value>
                <fullName>QV Team</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>Uni Direct Admissions</fullName>
            </value>
            <value>
                <fullName>Uni Examinations</fullName>
            </value>
            <value>
                <fullName>Uni INTL Admissions</fullName>
            </value>
            <value>
                <fullName>Uni Student Enrolment</fullName>
            </value>
            <value>
                <fullName>Uni Student Finance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>