salesforce-main/src/main/default/objects/Case/fields/CS_Ready_to_Close__c.field-meta.xml
<CustomField>
    <fullName>CS_Ready_to_Close__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CS Ready to Close</label>
    <type>Checkbox</type>
</CustomField>