salesforce-main/src/main/default/objects/Case/fields/CS_Student_Name__c.field-meta.xml
<CustomField>
    <fullName>CS_Student_Name__c</fullName>
    <label>Student Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>