salesforce-main/src/main/default/objects/Case/fields/Current_open_status_timestamp__c.field-meta.xml
<CustomField>
    <fullName>Current_open_status_timestamp__c</fullName>
    <description>Timestamp to show the time the current status was started</description>
    <label>Current open status timestamp</label>
    <type>DateTime</type>
</CustomField>