salesforce-main/src/main/default/objects/Case/fields/Current_owner_timestamp_closed__c.field-meta.xml
<CustomField>
    <fullName>Current_owner_timestamp_closed__c</fullName>
    <description>Shows the current timestamp when an owner is changed</description>
    <label>Current owner timestamp closed</label>
    <type>DateTime</type>
</CustomField>