salesforce-main/src/main/default/objects/Case/fields/Current_owner_timestamp_open__c.field-meta.xml
<CustomField>
    <fullName>Current_owner_timestamp_open__c</fullName>
    <description>Show the open time for the current owner</description>
    <label>Current owner timestamp open</label>
    <type>DateTime</type>
</CustomField>