salesforce-main/src/main/default/objects/Case/fields/Current_status_closed_timestamp__c.field-meta.xml
<CustomField>
    <fullName>Current_status_closed_timestamp__c</fullName>
    <description>Displays the current timestamp for status closing</description>
    <label>Current status closed timestamp</label>
    <type>DateTime</type>
</CustomField>