salesforce-main/src/main/default/objects/Case/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>This field is used to store the date value</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>