salesforce-main/src/main/default/objects/Case/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <inlineHelpText>Department that initiated the feature request or backlog.</inlineHelpText>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Admissions</fullName>
            </value>
            <value>
                <fullName>Business Development</fullName>
            </value>
            <value>
                <fullName>Data Team</fullName>
            </value>
            <value>
                <fullName>Executive</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Professional Development</fullName>
            </value>
            <value>
                <fullName>Professional Education</fullName>
            </value>
            <value>
                <fullName>Quality &amp; Performance</fullName>
            </value>
            <value>
                <fullName>Salesforce Team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>