salesforce-main/src/main/default/objects/Case/fields/Dependencies__c.field-meta.xml
<CustomField>
    <fullName>Dependencies__c</fullName>
    <description>What will prevent this backlog item from being deployed?</description>
    <label>Dependencies</label>
    <type>TextArea</type>
</CustomField>