salesforce-main/src/main/default/objects/Case/fields/Disable_Notifications__c.field-meta.xml
<CustomField>
    <fullName>Disable_Notifications__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to disable any automated outbound messages generated from this case.</description>
    <inlineHelpText>Check this box to disable any automated outbound messages generated from this case.</inlineHelpText>
    <label>Disable Notifications</label>
    <type>Checkbox</type>
</CustomField>