salesforce-main/src/main/default/objects/Case/fields/Email_Closed_Alert__c.field-meta.xml
<CustomField>
    <fullName>Email_Closed_Alert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>used to indicate email has been received after case is closed</description>
    <inlineHelpText>used to indicate email has been received after case is closed</inlineHelpText>
    <label>Email Closed Alert</label>
    <type>Checkbox</type>
</CustomField>