salesforce-main/src/main/default/objects/Case/fields/Email_Flag__c.field-meta.xml
<CustomField>
    <fullName>Email_Flag__c</fullName>
    <formula>IF( New_Email__c , IMAGE(&quot;/servlet/servlet.FileDownload?file=0150X000007x0kb&quot;, &quot;New Email&quot;),
&apos;&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Flag</label>
    <type>Text</type>
</CustomField>