salesforce-main/src/main/default/objects/Case/fields/Email_provided_in_RFI__c.field-meta.xml
<CustomField>
    <fullName>Email_provided_in_RFI__c</fullName>
    <description>This field is used to capture email address from RFI</description>
    <label>Email provided in RFI</label>
    <type>Email</type>
</CustomField>