salesforce-main/src/main/default/objects/Case/fields/Email_Verification_Auto_Close__c.field-meta.xml
<CustomField>
    <fullName>Email_Verification_Auto_Close__c</fullName>
    <description>Date/time of when to automatically close a case, normally the next working day, when an email verification link hasn&apos;t been clicked by next working day</description>
    <label>Email Verification Auto Close</label>
    <type>DateTime</type>
</CustomField>