salesforce-main/src/main/default/objects/Case/fields/Estimate__c.field-meta.xml
<CustomField>
    <fullName>Estimate__c</fullName>
    <label>Estimate</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>