salesforce-main/src/main/default/objects/Case/fields/External_Handover_Department__c.field-meta.xml
<CustomField>
    <fullName>External_Handover_Department__c</fullName>
    <label>External Handover Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>