salesforce-main/src/main/default/objects/Case/fields/External_Handover_Email__c.field-meta.xml
<CustomField>
    <fullName>External_Handover_Email__c</fullName>
    <label>External Handover Email</label>
    <type>Email</type>
</CustomField>