salesforce-main/src/main/default/objects/Case/fields/External_Handover_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>External_Handover_Full_Name__c</fullName>
    <label>External Handover Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>