salesforce-main/src/main/default/objects/Case/fields/Faculty_Member_Tutor__c.field-meta.xml
<CustomField>
    <fullName>Faculty_Member_Tutor__c</fullName>
    <description>This field is used to store the value of Faculty Member/Tutor</description>
    <label>Faculty Member/Tutor</label>
    <length>60</length>
    <type>Text</type>
</CustomField>