salesforce-main/src/main/default/objects/Case/fields/Functional_QA_Approval__c.field-meta.xml
<CustomField>
    <fullName>Functional_QA_Approval__c</fullName>
    <label>Functional QA Approval</label>
    <type>Date</type>
</CustomField>