salesforce-main/src/main/default/objects/Case/fields/Functional_QA_Resource__c.field-meta.xml
<CustomField>
    <fullName>Functional_QA_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Resource that will perform iterative functional QA.</inlineHelpText>
    <label>Functional QA Resource</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Functional_QA_Backlogs</relationshipName>
    <type>Lookup</type>
</CustomField>