salesforce-main/src/main/default/objects/Case/fields/Go_Live_Dependency__c.field-meta.xml
<CustomField>
    <fullName>Go_Live_Dependency__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Go-Live Dependency</label>
    <type>Checkbox</type>
</CustomField>