salesforce-main/src/main/default/objects/Case/fields/Impact__c.field-meta.xml
<CustomField>
    <fullName>Impact__c</fullName>
    <description>Description of the impact that this backlog will have on other systems, end users, or any other area of the business.</description>
    <label>Impact</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>