salesforce-main/src/main/default/objects/Case/fields/Incoming_Email_From__c.field-meta.xml
<CustomField>
    <fullName>Incoming_Email_From__c</fullName>
    <description>sender email address of email received when case is closed</description>
    <inlineHelpText>sender email address of email received when case is closed</inlineHelpText>
    <label>Incoming Email From</label>
    <type>Email</type>
</CustomField>