salesforce-main/src/main/default/objects/Case/fields/Invoice_Bill_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Bill_Number__c</fullName>
    <description>This field is used to store the Invoice/ Bill Number</description>
    <label>Invoice/ Bill Number</label>
    <length>60</length>
    <type>Text</type>
</CustomField>