salesforce-main/src/main/default/objects/Case/fields/IOS_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>IOS_Approval_Status__c</fullName>
    <label>IOS Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Query_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>School Programme Support Approved</fullName>
            </value>
            <value>
                <fullName>School Programme Support Rejected</fullName>
            </value>
            <value>
                <fullName>Finance/Study Visa Approved</fullName>
            </value>
            <value>
                <fullName>Finance/Study Visa Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>