salesforce-main/src/main/default/objects/Case/fields/IOS_Form_Received__c.field-meta.xml
<CustomField>
    <fullName>IOS_Form_Received__c</fullName>
    <label>IOS Form Received?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Query_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>