salesforce-main/src/main/default/objects/Case/fields/IsCaseClosed__c.field-meta.xml
<CustomField>
    <fullName>IsCaseClosed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to indicate whether the case is closed or not.</description>
    <label>IsCaseClosed</label>
    <type>Checkbox</type>
</CustomField>