salesforce-main/src/main/default/objects/Case/fields/Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>Issue_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field provides look up to Issue Type from Case.</description>
    <label>Issue Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Issues_Type__c.Case_Group__c</field>
            <operation>equals</operation>
            <valueField>$Source.Case_Group__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Issues_Type__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>