salesforce-main/src/main/default/objects/Case/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>This field is used to store the location of the student</description>
    <label>Location</label>
    <length>60</length>
    <type>Text</type>
</CustomField>