salesforce-main/src/main/default/objects/Case/fields/Minutes_spent_in_previous_status__c.field-meta.xml
<CustomField>
    <fullName>Minutes_spent_in_previous_status__c</fullName>
    <description>Field to stamp the number of minutes spent in the previous status</description>
    <label>Minutes spent in previous status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>