salesforce-main/src/main/default/objects/Case/fields/Minutes_spent_with_previous_case_owner__c.field-meta.xml
<CustomField>
    <fullName>Minutes_spent_with_previous_case_owner__c</fullName>
    <description>Field to calculate the total number of minutes spent with the previous case owner</description>
    <label>Minutes spent with previous case owner</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>