salesforce-main/src/main/default/objects/Case/fields/Needs_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Needs_Requirements__c</fullName>
    <description>This field is used to store the student needs</description>
    <label>Needs/Requirements</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>