salesforce-main/src/main/default/objects/Case/fields/New_Email__c.field-meta.xml
<CustomField>
    <fullName>New_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Email</label>
    <type>Checkbox</type>
</CustomField>