salesforce-main/src/main/default/objects/Case/fields/Next_Step__c.field-meta.xml
<CustomField>
    <fullName>Next_Step__c</fullName>
    <label>Next Step</label>
    <length>255</length>
    <type>Text</type>
</CustomField>