salesforce-main/src/main/default/objects/Case/fields/Owner_Department__c.field-meta.xml
<CustomField>
    <fullName>Owner_Department__c</fullName>
    <description>sets the case department based on queue / user ownership.</description>
    <formula>IF(ISBLANK (Owner:Queue.QueueName ),  Owner:User.Department , CASE(Owner:Queue.DeveloperName , &apos;Student_Advice&apos;, &apos;Student Advice&apos;, &apos;International_Student_Advice&apos;, &apos;Student Advice&apos;,&apos;Student_Advice_Oyster&apos;,&apos;Student Advice&apos;,&apos;Student_Records&apos;, &apos;Student Records&apos;, &apos;School_Program_Support&apos;, &apos;School Program Support&apos;,&apos;Head_of_Student_Experience&apos;,&apos;Student Advice&apos;,&apos;Library_Manager&apos;,&apos;Student Advice&apos;,&apos;Exam_Graduation_Teams&apos;,&apos;Exam &amp; Graduation&apos;,&apos; &apos;))</formula>
    <inlineHelpText>Owner:Queue.QueueName</inlineHelpText>
    <label>Sharing Owner Department</label>
    <type>Text</type>
</CustomField>