salesforce-main/src/main/default/objects/Case/fields/Owner_Name_Department__c.field-meta.xml
<CustomField>
    <fullName>Owner_Name_Department__c</fullName>
    <description>External_Handover__r.FirstName &amp; &quot; &quot; &amp; External_Handover__r.LastName &amp; &quot; - &quot; &amp; External_Handover__r.Title,</description>
    <formula>IF(
 ISPICKVAL( Status, &quot;External Handover&quot;),
 External_Handover_Full_Name__c &amp; &quot; (&quot; &amp; External_Handover_Department__c &amp; &quot;)&quot;,
 IF( 
  LEFT( OwnerId, 3) = &quot;00G&quot;,
  Owner:Queue.Name,
  Owner:User.FirstName &amp; &quot; &quot; &amp; Owner:User.LastName &amp;
  IF(
   ISBLANK( Owner:User.Department),
   &quot;&quot;,
   &quot; (&quot; &amp; Owner:User.Department &amp; &quot;)&quot;
  )
 )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Template Owner Name &amp; Team/Department</label>
    <type>Text</type>
</CustomField>