salesforce-main/src/main/default/objects/Case/fields/Oyster_Peak__c.field-meta.xml
<CustomField>
    <fullName>Oyster_Peak__c</fullName>
    <formula>$Setup.Student_Queries__c.Oyster_Peak_Period__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Oyster Peak</label>
    <type>Checkbox</type>
</CustomField>