salesforce-main/src/main/default/objects/Case/fields/Previous_owner__c.field-meta.xml
<CustomField>
    <fullName>Previous_owner__c</fullName>
    <description>Provides information on the previous owner</description>
    <label>Previous owner</label>
    <length>25</length>
    <type>Text</type>
</CustomField>