salesforce-main/src/main/default/objects/Case/fields/Previous_owner_closed_timestamp__c.field-meta.xml
<CustomField>
    <fullName>Previous_owner_closed_timestamp__c</fullName>
    <description>Timestamp displaying previous owner closing time</description>
    <label>Previous owner closed timestamp</label>
    <type>DateTime</type>
</CustomField>