salesforce-main/src/main/default/objects/Case/fields/Previous_owner_open_timestamp__c.field-meta.xml
<CustomField>
    <fullName>Previous_owner_open_timestamp__c</fullName>
    <description>Timestamp to display previous owners open time</description>
    <label>Previous owner open timestamp</label>
    <type>DateTime</type>
</CustomField>