salesforce-main/src/main/default/objects/Case/fields/Previous_Status__c.field-meta.xml
<CustomField>
    <fullName>Previous_Status__c</fullName>
    <description>Field displaying previous status</description>
    <label>Previous Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>