salesforce-main/src/main/default/objects/Case/fields/Previous_status_closed_timestamp__c.field-meta.xml
<CustomField>
    <fullName>Previous_status_closed_timestamp__c</fullName>
    <description>Timestamp to display previous status closed time</description>
    <label>Previous status closed timestamp</label>
    <type>DateTime</type>
</CustomField>