salesforce-main/src/main/default/objects/Case/fields/Previous_status_open_timestamp__c.field-meta.xml
<CustomField>
    <fullName>Previous_status_open_timestamp__c</fullName>
    <description>Timestamp to show previous status open time</description>
    <label>Previous status open timestamp</label>
    <type>DateTime</type>
</CustomField>