salesforce-main/src/main/default/objects/Case/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <description>This field is used to specify the student program</description>
    <label>Program</label>
    <length>60</length>
    <type>Text</type>
</CustomField>