salesforce-main/src/main/default/objects/Case/fields/Programme_Course__c.field-meta.xml
<CustomField>
    <fullName>Programme_Course__c</fullName>
    <label>Programme/Course</label>
    <length>255</length>
    <type>Text</type>
</CustomField>