salesforce-main/src/main/default/objects/Case/fields/Query_Id__c.field-meta.xml
<CustomField>
    <fullName>Query_Id__c</fullName>
    <description>The external ID from the website</description>
    <externalId>true</externalId>
    <inlineHelpText>The external ID from the website</inlineHelpText>
    <label>Query Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>